<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.asiantech.intern20summer1.w0.BeginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/begin_padding_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/begin_margin_button"
            android:text="@string/intern_summer_2020"
            android:textSize="@dimen/begin_text_size"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/begin_margin_button"
            android:text="@string/w1_java" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/begin_margin_button"
            android:text="@string/w2_kotlin" />

        <Button
            android:id="@+id/btnBeginW3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/begin_margin_button"
            android:text="@string/w3_layout" />

        <Button
            android:id="@+id/btnBeginW4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/begin_margin_button"
            android:text="@string/w4_activity_fragment" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/begin_margin_button"
            android:text="@string/w5_recycle_view" />

        <Button
            android:id="@+id/btnBeginW6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/begin_margin_button"
            android:text="@string/w6_view_pager_tab_layout" />

        <Button
            android:id="@+id/btnBeginW8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/begin_margin_button"
            android:text="@string/w8_thread_handler_async_task" />
    </LinearLayout>
</ScrollView>
