<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/sign_in_edit_text_margin_left_right"
        android:paddingRight="@dimen/sign_in_edit_text_margin_left_right"
        android:background="@color/background_white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnBackToSignIn"
            android:layout_width="@dimen/w4_back_button_size"
            android:layout_height="@dimen/w4_back_button_size"
            android:background="@color/background_white"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_to_music_festival"
            android:textColor="@color/black"
            android:textSize="@dimen/sign_up_title_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_in_margin_top_all"
            android:text="@string/full_name"
            android:textSize="@dimen/text_size_title_edit_text" />

        <EditText
            android:id="@+id/edtNameSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAvatar"
            android:layout_width="@dimen/sign_up_avatar_size"
            android:layout_height="@dimen/sign_up_avatar_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sign_in_margin_top_all"
            app:cardCornerRadius="@dimen/sign_up_avatar_corner_radius">

            <ImageView
                android:id="@+id/imgAvatarSignUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/avatar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/text_size_title_edit_text" />

        <EditText
            android:id="@+id/edtEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_in_margin_top_all"
            android:text="@string/mobile_number"
            android:textSize="@dimen/text_size_title_edit_text" />

        <EditText
            android:id="@+id/edtNumberSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_in_margin_top_all"
            android:text="@string/password"
            android:textSize="@dimen/text_size_title_edit_text" />

        <EditText
            android:id="@+id/edtPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_in_margin_top_all"
            android:text="@string/confirm_password"
            android:textSize="@dimen/text_size_title_edit_text" />

        <EditText
            android:id="@+id/edtRePassSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_in_edit_text_margin_left_right"
            android:background="@color/button_login_register"
            android:text="@string/register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/sign_in_button_margin_top"
            android:text="@string/by_registering_you_agree_to_terms_conditions_and_privacy_policy_of_the_festival"
            android:textSize="@dimen/by_registering_text_size" />
    </LinearLayout>
</ScrollView>
