<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/ln_main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/linear_layout_margin"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:layout_marginBottom="@dimen/logo_margin_bottom"
            android:src="@drawable/logo_music" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/social_height"
            android:layout_marginBottom="@dimen/social_margin_bottom"
            android:baselineAligned="false"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/social_layout_margin_right"
                android:layout_weight="1"
                android:background="@drawable/bg_social"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/social_logo_size"
                    android:layout_height="@dimen/social_logo_size"
                    android:layout_margin="@dimen/social_logo_margin"
                    android:src="@drawable/iconfinder_facebook_834722" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/facebook" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_social"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/social_logo_size"
                    android:layout_height="@dimen/social_logo_size"
                    android:layout_margin="@dimen/social_logo_margin"
                    android:src="@drawable/iconfinder_google_circle_294707" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/google" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/text_view_or_margin_bottom"
            android:text="@string/or"
            android:textColor="@color/colorGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_ID"
            android:textColor="@color/colorGray" />

        <EditText
            android:id="@+id/edt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:autofillHints="@string/email_ID"
            android:hint="@string/email_ID"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorGray" />

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/forgot_password_margin_bottom"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:background="@drawable/bg_login_button"
            android:enabled="false"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/sign_up_text_view_margin_bottom"
            android:text="@string/register_now" />
    </LinearLayout>
</ScrollView>
